# AlphaEarth

./: DEPLOYMENT.md  PROJECT_SUMMARY.md  README.md  requirements.txt
alphaearth/: README.md  requirements.txt
alphaearth/baselines/: run_clay.py  run_satclip.py
alphaearth/configs/: base.yaml
alphaearth/datasets/: webdataset_datamodule.py
alphaearth/eval/: downstream.py  retrieval.py  retrieval_eval.py
alphaearth/inference/: server.py
alphaearth/models/: __init__.py
alphaearth/objectives/: losses.py  samplers.py
alphaearth/scripts/: build_shards.py  fit_scaling.py
alphaearth/train/: build_model.py  train_dist.py
alphaearth/utils/: config.py
alphaearth_enhanced/: ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  requirements.txt  train.py
alphaearth_enhanced/configs/: pretrain.yaml
alphaearth_enhanced/models/: __init__.py  alphaearth_enhanced.py
alphaearthx/: .gitignore  README.md  pyproject.toml  requirements.txt
alphaearthx/alphaearthx/: __init__.py
alphaearthx/alphaearthx/configs/: config.yaml
alphaearthx/alphaearthx/configs/data/: toy.yaml
alphaearthx/alphaearthx/configs/model/: backbone.yaml
alphaearthx/alphaearthx/configs/optimizer/: adamw.yaml
alphaearthx/alphaearthx/configs/trainer/: default.yaml
alphaearthx/alphaearthx/data/: __init__.py  registry.py  toy_dataset.py
alphaearthx/alphaearthx/models/: __init__.py  fusion.py  heads.py  moe.py  spatiotemporal_transformer.py
alphaearthx/alphaearthx/objectives/: __init__.py  contrastive.py  masking.py
alphaearthx/alphaearthx/training/: __init__.py  trainer.py
alphaearthx/scripts/: train.py
configs/: base_config.yaml  train_config.yaml
data/: __init__.py
data/datasets/: __init__.py  multimodal_dataset.py  optical_dataset.py
enhanced_earth_foundation/: DEVELOPMENT_PLAN.md  Makefile  PROJECT_SUMMARY.md  README.md  architecture_overview.py  pyproject.toml  quick_demo.py  requirements.txt  setup.py
enhanced_earth_foundation/configs/: global_model.yaml
enhanced_earth_foundation/scripts/: demo.py  train.py
enhanced_earth_foundation/src/enhanced_earth/: __init__.py
enhanced_earth_foundation/src/enhanced_earth/data/: __init__.py  data_loaders.py  data_sources.py  multimodal_dataset.py  transforms.py
enhanced_earth_foundation/src/enhanced_earth/models/: __init__.py  backbone.py  decoder.py  dynamic_embedding.py  enhanced_earth_model.py  multimodal_encoder.py  position_encoding.py  pyramid_exchange.py  stp_encoder.py  stp_operators.py  temporal_summarizer.py  text_encoder.py
enhanced_earth_foundation/src/enhanced_earth/training/: __init__.py  callbacks.py  losses.py  metrics.py  trainer.py
enhanced_earth_foundation/src/enhanced_earth/utils/: __init__.py  logging.py  reproducibility.py
evaluation/: __init__.py  evaluator.py  metrics.py
models/: __init__.py  alphaearth.py
models/encoders/: __init__.py  meteorological_encoder.py  optical_encoder.py  radar_encoder.py  text_encoder.py
models/fusion/: __init__.py  cross_attention_fusion.py  multimodal_fusion.py  spatial_temporal_precision.py
models/heads/: __init__.py  classification_head.py  regression_head.py  (+1 more)
scripts/: train.py
training/: __init__.py  trainer.py
utils/: __init__.py  data_utils.py  logging.py  misc.py
(+26 files in other folders)
