[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphaearthx"
version = "0.0.1"
description = "AlphaEarthX: A scalable multi-modal spatiotemporal foundation model for Earth observation."
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["alphaearthx*"]
exclude = ["tests*"]