[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enhanced-earth-foundation"
version = "0.1.0"
description = "Enhanced Earth Foundation Model - A global-scale multimodal earth observation foundation model"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Enhanced Earth Team", email = "contact@enhanced-earth.ai"}
]
keywords = ["earth observation", "foundation model", "multimodal", "remote sensing", "transformer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers", 
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "timm>=0.9.12",
    "transformers>=4.35.0",
    "lightning>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "rasterio>=1.3.8",
    "geopandas>=0.14.0",
    "xarray>=2023.8.0",
    "einops>=0.7.0",
    "tqdm>=4.65.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "wandb>=0.15.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0", 
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0"
]

flash = [
    "flash-attn>=2.3.0"
]

distributed = [
    "deepspeed>=0.10.0",
    "fairscale>=0.4.13"
]

[project.scripts]
enhanced-earth-train = "enhanced_earth.scripts.train:main"
enhanced-earth-demo = "enhanced_earth.scripts.demo:main_demo"

[project.urls]
Homepage = "https://github.com/enhanced-earth/foundation-model"
Repository = "https://github.com/enhanced-earth/foundation-model"
Documentation = "https://enhanced-earth.readthedocs.io"
"Bug Tracker" = "https://github.com/enhanced-earth/foundation-model/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"enhanced_earth" = ["configs/*.yaml", "data/*.json"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true